@@ -1,4 +1,4 @@
 #Ibator build version info
-#Mon Jun 08 17:15:58 CDT 2009
+#Tue Jun 16 16:44:16 CDT 2009
 version=1.2.2
-buildNum=742
+buildNum=744
