@@ -60,6 +60,7 @@
       (from EqualsHashCodePlugin) when certain
       fields are null - thanks to Benjamin Klatt for finding this bug.</li>
   <li>IBATIS-601 - improper validation of &lt;generatedKey&gt;</li>
+  <li>IBATIS-609 - incorrect parsing of Java generic types</li>
 </ul>
 
 <h3>Enhancements</h3>
