@@ -11,6 +11,7 @@ Bugs:
 3. Fixed NPE and incorrect calculation in generated equals when certain
    fields are null - thanks to Benjamin Klatt for finding this bug
 4. Fixed IBATIS-601 - improper validation of <generatedKey>
+5. Fixed IBATIS-609 - incorrect parsing of Java generic types
 
 Enhancements:
 1. IBATIS-569 - Make it easier to override IbatorRules in plugins
